# FormBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/formbot/: app.py  test.html
